Fixes #276 Entity Popup now supports appx 64 characters in width and wraps accordingly

--- a/public/css/styles.less
+++ b/public/css/styles.less
@@ -10,7 +10,7 @@
 
 .flair_header {
     position:relative;
-    display: inline-flex;
+    word-wrap: break-word;
 }
 
 .alertgroup_open {
